<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/rss"
        android:title="@string/title_feed"/>

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/plus"
        android:title="@string/title_posts"/>

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/speechbubble"
        android:title="@string/title_messages"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/notification"
        android:title="@string/title_notifications"/>


    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/avatar"
        android:title="@string/title_profile"/>
</menu>
