<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.lovertips.home.HomeFragment"
        android:label="@string/title_feed" />

    <fragment
        android:id="@+id/navigation_post"
        android:name="com.example.lovertips.posts.PostFragment"
        android:label="@string/title_feed" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.lovertips.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.lovertips.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.lovertips.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_broadcast"
        android:name="com.example.lovertips.home.broadcast.BroadcastFragment"
        android:label=""
        tools:layout="@layout/fragment_broadcast" />
</navigation>