<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:background="@color/colorWhite"
    tools:context=".register.ui.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="30sp"
            android:textAlignment="center"
            app:fontFamily="@font/montserrat_alternates" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="440dp"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/phone_icon"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:padding="20dp"
                    android:textSize="14sp"
                    android:textColorHint="#606060"
                    android:hint="@string/user_id_hint"
                    android:inputType="textEmailAddress"/>


                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/mail_icon"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:hint="@string/phone_number"
                    android:padding="20dp"
                    android:textSize="14sp"
                    android:textColorHint="#606060"
                    android:inputType="phone"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableStart="@drawable/password_icon"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:textSize="14sp"
                    android:drawablePadding="10dp"
                    android:padding="20dp"
                    android:textColorHint="#606060"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableStart="@drawable/password_icon"
                    android:layout_marginEnd="20dp"
                    android:id="@+id/confirm_password"
                    android:layout_marginStart="20dp"
                    android:textSize="14sp"
                    android:drawablePadding="10dp"
                    android:padding="20dp"
                    android:textColorHint="#606060"
                    android:hint="@string/confirm_pwd"
                    android:inputType="textPassword"/>


                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="64dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/password"
                    app:layout_constraintStart_toStartOf="@+id/password"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.3" />
                
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terms"
                    android:id="@+id/checkbox"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="30dp" />

                <Button
                    android:id="@+id/signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_background"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:text="@string/haveanaccount"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:fontFamily="@font/montserrat_alternates" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>