<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:fontFamily="@font/montserrat_alternates">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@mipmap/lovertips_logo_foreground"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textAlignment="center" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center">
            <!--android:background="@drawable/layout_background">-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/mail_icon"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:padding="20dp"
                    android:textSize="14sp"
                    android:textColorHint="#606060"
                    android:hint="@string/username_hint"
                    android:inputType="textEmailAddress"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableStart="@drawable/password_icon"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:textSize="14sp"
                    android:drawablePadding="10dp"
                    android:padding="20dp"
                    android:textColorHint="#606060"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="64dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/password"
                    app:layout_constraintStart_toStartOf="@+id/password"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.3" />


                <Button
                    android:id="@+id/signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_background"
                    android:text="@string/action_sign_in"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/forgotpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="30dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:text="@string/new_user_create_account"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:fontFamily="@font/montserrat_alternates" />

                <!--<Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/signup"
                    android:background="@drawable/button_background"
                    android:text="SIGN UP"
                    android:textColor="@android:color/white" />-->
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>